# neuroviz

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  env.example
backend/: Dockerfile  build.gradle
backend/src/main/java/com/neuroviz/: NeurovizApplication.java
backend/src/main/java/com/neuroviz/config/: RestTemplateConfig.java  WebSocketConfig.java
backend/src/main/java/com/neuroviz/controller/: AuthController.java  JobController.java  ProcessingController.java  SessionController.java  StreamController.java
backend/src/main/java/com/neuroviz/dto/: ChannelDataDto.java  ProcessingJobDto.java  SessionDto.java  UserDto.java
backend/src/main/java/com/neuroviz/dto/request/: CreateSessionRequest.java  LoginRequest.java  PreprocessRequest.java  SignupRequest.java
backend/src/main/java/com/neuroviz/entity/: ChannelData.java  ProcessingJob.java  Session.java  User.java
backend/src/main/java/com/neuroviz/repository/: ChannelDataRepository.java  ProcessingJobRepository.java  SessionRepository.java  UserRepository.java
backend/src/main/java/com/neuroviz/security/: JwtAuthenticationFilter.java  JwtTokenProvider.java  JwtUtils.java  SecurityConfig.java  UserService.java
backend/src/main/java/com/neuroviz/service/: ProcessingService.java  SessionService.java  UserService.java  UserServiceImpl.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V1__Initial_schema.sql  V2__Seed_demo_user.sql
backend/src/test/java/com/neuroviz/: NeurovizApplicationTests.java
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: App.test.tsx  setup.ts
frontend/src/components/: AuthGuard.tsx  BandPowerChart.tsx  EEGStreamChart.tsx  Layout.tsx  LoadingSpinner.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: DashboardPage.tsx  LiveStreamPage.tsx  LoginPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx  SignupPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infra/nginx/: nginx.conf
processing/: Dockerfile  pyproject.toml  requirements.txt
processing/app/: __init__.py  main.py
processing/app/models/: schemas.py
processing/app/routers/: analytics.py  classification.py  preprocessing.py
processing/app/services/: classifier.py  signal_processor.py
processing/app/utils/: config.py  logging_config.py
processing/tests/: test_signal_processor.py
scripts/seed/: seed_demo_data.py
scripts/tools/: stream_simulator.py
(+2 files in other folders)
